이미지, 로그아웃 경로 수정

--- a/src/main/resources/templates/page/shop-manage.html
+++ b/src/main/resources/templates/page/shop-manage.html
@@ -410,10 +410,10 @@
                 },
                 getImagePath: function(fileTgt, fileName) {
                     if (fileName !== undefined && fileName !== null && fileName !== '') {
-                        return '/imageSrc?fileName=' + fileName
+                        return '../imageSrc?fileName=' + fileName
                     } else {
                         if (fileTgt === 'shopimg') {
-                            return '/images/shop/bnimg/shop.png'
+                            return '../images/shop/bnimg/shop.png'
                         }
                     }
                 },
