--- a/src/main/resources/templates/page/main.html
+++ b/src/main/resources/templates/page/main.html
@@ -266,7 +266,7 @@
                 mainInit: function() {
                     if (this.bnCardChkYn === 'N') {
                         alert('현재 사업자 등록증 확인 중입니다.\n확인 완료 후 로그인 하실 수 있습니다.\n(평일(공휴일 제외) 24시간 이내 완료)')
-                        window.location.href = "/logout"
+                        window.location.href = "./logout"
                     } else if (this.pwnoInitYn === 'Y') {
                         $('#popLayerInitPw').popup('show')
                     }
@@ -289,7 +289,7 @@
                 updatePwdCB: function(rslt) {
                     if (rslt.rsltStat === 'SUCC') {
                         alert('비밀번호 변경이 완료되었습니다.\n새 비밀번호로 로그인 해주세요.')
-                        window.location.href = "/logout"
+                        window.location.href = "./logout"
                     }
                 }
             },
